--- a/client/layout/homeLayout.html
+++ b/client/layout/homeLayout.html
@@ -32,8 +32,8 @@
 </head>
 
 <template name="homeLayout">
-  ***REMOVED******REMOVED***> navbar***REMOVED******REMOVED***
-  ***REMOVED******REMOVED***> notifications***REMOVED******REMOVED***
-		  ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
-	***REMOVED******REMOVED***> footer***REMOVED******REMOVED***
+  {{> navbar}}
+  {{> notifications}}
+		  {{> yield}}
+	{{> footer}}
 </template>
