--- a/client/layout/default.html
+++ b/client/layout/default.html
@@ -4,12 +4,12 @@
 
 <template name="defaultLayout">
     <link href="css/freelancer.css" rel="stylesheet">
-    ***REMOVED******REMOVED***> navbar***REMOVED******REMOVED***
-    ***REMOVED******REMOVED***> notifications***REMOVED******REMOVED***
+    {{> navbar}}
+    {{> notifications}}
     <div class="container" style="margin-top: 80px;margin-bottom: 200px;">
         <div clas="row">
-          ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
+          {{> yield}}
         </div>
     </div>
-    ***REMOVED******REMOVED***> footer***REMOVED******REMOVED***
+    {{> footer}}
 </template>
