--- a/client/views/events/events.create.html
+++ b/client/views/events/events.create.html
@@ -1,16 +1,16 @@
 <template name="newEvent">
-     <!-- ***REMOVED******REMOVED***> quickForm collection="Events" id="insertEventForm" type="insert"***REMOVED******REMOVED*** -->
-     ***REMOVED******REMOVED***#autoForm collection="Events" id="insertEventForm" type="insert"***REMOVED******REMOVED***
+     <!-- {{> quickForm collection="Events" id="insertEventForm" type="insert"}} -->
+     {{#autoForm collection="Events" id="insertEventForm" type="insert"}}
       <fieldset>
         <legend>Add an Event</legend>
-        ***REMOVED******REMOVED***> afQuickField name='name'***REMOVED******REMOVED***
-        ***REMOVED******REMOVED***> afQuickField name='brief' rows=6***REMOVED******REMOVED***
-        ***REMOVED******REMOVED***> afQuickField name='image'***REMOVED******REMOVED***
-        ***REMOVED******REMOVED***> afQuickField name='tickets_url'***REMOVED******REMOVED***
-        ***REMOVED******REMOVED***> afQuickField name='venue'***REMOVED******REMOVED***
-        ***REMOVED******REMOVED***> afFormGroup name='startDate' type="datetime-local"***REMOVED******REMOVED***
-        ***REMOVED******REMOVED***> afFormGroup name='endDate' type="datetime-local"***REMOVED******REMOVED***
+        {{> afQuickField name='name'}}
+        {{> afQuickField name='brief' rows=6}}
+        {{> afQuickField name='image'}}
+        {{> afQuickField name='tickets_url'}}
+        {{> afQuickField name='venue'}}
+        {{> afFormGroup name='startDate' type="datetime-local"}}
+        {{> afFormGroup name='endDate' type="datetime-local"}}
       </fieldset>
       <button type="submit" class="btn btn-primary">Insert</button>
-  ***REMOVED******REMOVED***/autoForm***REMOVED******REMOVED***
+  {{/autoForm}}
 </template>
