--- a/client/views/events/events.edit.html
+++ b/client/views/events/events.edit.html
@@ -1,16 +1,16 @@
 <template name="eventEdit">
-    ***REMOVED******REMOVED***#autoForm collection="Events"  doc=this id="updateEventForm" type="update"***REMOVED******REMOVED***
+    {{#autoForm collection="Events"  doc=this id="updateEventForm" type="update"}}
      <fieldset>
        <legend>Add an Event</legend>
-       ***REMOVED******REMOVED***> afQuickField name='name'***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afQuickField name='brief' rows=6***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afQuickField name='image'***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afQuickField name='tickets_url'***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afQuickField name='venue'***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afFormGroup name='startDate' type="datetime-local"***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afFormGroup name='endDate' type="datetime-local"***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afQuickField name='eventbrite_id'***REMOVED******REMOVED***
+       {{> afQuickField name='name'}}
+       {{> afQuickField name='brief' rows=6}}
+       {{> afQuickField name='image'}}
+       {{> afQuickField name='tickets_url'}}
+       {{> afQuickField name='venue'}}
+       {{> afFormGroup name='startDate' type="datetime-local"}}
+       {{> afFormGroup name='endDate' type="datetime-local"}}
+       {{> afQuickField name='eventbrite_id'}}
      </fieldset>
      <button type="submit" class="btn btn-primary">Update</button>
- ***REMOVED******REMOVED***/autoForm***REMOVED******REMOVED***
+ {{/autoForm}}
 </template>
