--- a/client/views/events/events.show.html
+++ b/client/views/events/events.show.html
@@ -1,44 +1,44 @@
 <template name="eventShow">
     <div class="col-md-8">
-        <h1>***REMOVED******REMOVED***name***REMOVED******REMOVED***</h1>
+        <h1>{{name}}</h1>
         <hr class="star-primary">
         <div class="event_actions">
-            <img src="***REMOVED******REMOVED***image***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** logo" width="200px"/>
-            ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
-               <a class="btn btn-primary" href="***REMOVED******REMOVED***pathFor route='event.edit'***REMOVED******REMOVED***"><i class="fa fa-pencil"></i> Edit</a>
-            ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
-            <a class="btn btn-primary" href="***REMOVED******REMOVED***pathFor route='event.leaderboard'***REMOVED******REMOVED***"><i class="glyphicon glyphicon-tower"></i> Leaderboard</a>
+            <img src="{{image}}" alt="{{name}} logo" width="200px"/>
+            {{#if isInRole 'admin'}}
+               <a class="btn btn-primary" href="{{pathFor route='event.edit'}}"><i class="fa fa-pencil"></i> Edit</a>
+            {{/if}}
+            <a class="btn btn-primary" href="{{pathFor route='event.leaderboard'}}"><i class="glyphicon glyphicon-tower"></i> Leaderboard</a>
         </div>
         <p>
 
         </p>
 
         <p class="description_speedHack">
-            ***REMOVED******REMOVED******REMOVED***brief***REMOVED******REMOVED******REMOVED***
+            {{{brief}}}
         </p>
-        ***REMOVED******REMOVED***> whereWhen***REMOVED******REMOVED***
+        {{> whereWhen}}
     </div>
     <div class="col-md-4">
-        ***REMOVED******REMOVED***> sponsorsSection***REMOVED******REMOVED***
+        {{> sponsorsSection}}
     </div>
 </template>
 
 <template name="sponsorsSection">
     <div class="row">
         <h2>Sponsors
-            ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
-               ***REMOVED******REMOVED***> addSponsorMenu***REMOVED******REMOVED***
-            ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
+            {{#if isInRole 'admin'}}
+               {{> addSponsorMenu}}
+            {{/if}}
         </h2>
         <ul class="ul_sponsors">
-         ***REMOVED******REMOVED***#each sponsors***REMOVED******REMOVED***
+         {{#each sponsors}}
             <li>
-                <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" class="sponsor_logo" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo"/></a>
+                <a href="{{url}}" target="_blank"><img src="{{logo}}" class="sponsor_logo" alt="{{name}} sponsor logo"/></a>
             </li>
-            ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
-               ***REMOVED******REMOVED***> removeSponsorMenu***REMOVED******REMOVED***
-            ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
-         ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
+            {{#if isInRole 'admin'}}
+               {{> removeSponsorMenu}}
+            {{/if}}
+         {{/each}}
      </ul>
     </div>
 </template>
@@ -47,26 +47,26 @@
     <div class = "row">
             <div class="col-md-8 well">
                 <p>
-                    <i class="fa fa-map-marker"></i> ***REMOVED******REMOVED***venue.name***REMOVED******REMOVED*** in <b>***REMOVED******REMOVED***venue.city***REMOVED******REMOVED***</b> at <i>***REMOVED******REMOVED***venue.address***REMOVED******REMOVED***</i> <a href="http://maps.google.com/?q=***REMOVED******REMOVED***venue.name***REMOVED******REMOVED***+***REMOVED******REMOVED***venue.city***REMOVED******REMOVED***"> map <i class="fa fa-external-link"></i></a>
+                    <i class="fa fa-map-marker"></i> {{venue.name}} in <b>{{venue.city}}</b> at <i>{{venue.address}}</i> <a href="http://maps.google.com/?q={{venue.name}}+{{venue.city}}"> map <i class="fa fa-external-link"></i></a>
                 </p>
                 <p>
-                    <i class="glyphicon glyphicon-time"></i> On ***REMOVED******REMOVED***displayDay startDate***REMOVED******REMOVED*** from ***REMOVED******REMOVED***displayHours startDate***REMOVED******REMOVED*** to ***REMOVED******REMOVED***displayHours endDate***REMOVED******REMOVED***
+                    <i class="glyphicon glyphicon-time"></i> On {{displayDay startDate}} from {{displayHours startDate}} to {{displayHours endDate}}
                 </p>
-                ***REMOVED******REMOVED***#if tickets_url***REMOVED******REMOVED***
+                {{#if tickets_url}}
                 <p>
-                    <i class="fa fa-ticket"></i> Tickets: <a href="***REMOVED******REMOVED***tickets_url***REMOVED******REMOVED***">Register</a>
+                    <i class="fa fa-ticket"></i> Tickets: <a href="{{tickets_url}}">Register</a>
                 </p>
-                ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
+                {{/if}}
             </div>
     </div>
 </template>
 
 <template name="mySolutions">
-    ***REMOVED******REMOVED***> reactiveTable collection=mySolutions showNavigation='never' showFilter=false settings=settings***REMOVED******REMOVED***
+    {{> reactiveTable collection=mySolutions showNavigation='never' showFilter=false settings=settings}}
 </template>
 
 <template name="sponsorCell">
-    <img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="" />
+    <img src="{{logo}}" alt="" />
 </template>
 
 <template name="addSponsorMenu">
@@ -80,5 +80,5 @@
 </template>
 
 <template name="removeSponsorMenu">
-    <button id="removeSponsorButton"  data-eventSlug=***REMOVED******REMOVED***eventSlug ..***REMOVED******REMOVED*** class="btn btn-primary" name="Remove Sponsor">-</button>
+    <button id="removeSponsorButton"  data-eventSlug={{eventSlug ..}} class="btn btn-primary" name="Remove Sponsor">-</button>
 </template>
