--- a/client/views/sponsors/sponsorshipDetails.html
+++ b/client/views/sponsors/sponsorshipDetails.html
@@ -10,16 +10,16 @@
     </p>
 
     <h2>Past sponsors</h2>
-    ***REMOVED******REMOVED***>partnersLogo***REMOVED******REMOVED***
+    {{>partnersLogo}}
 
     <h2>Sponsor Faq</h2>
-    ***REMOVED******REMOVED***> sponsorsFaq***REMOVED******REMOVED***
+    {{> sponsorsFaq}}
     <p>
         If you are interested to sponsor a SpeedHack, shoot us an email.
     </p>
     <a class="typeform-share btn btn-lg btn-outline_green" href="https://picsoung.typeform.com/to/EkPqrX" data-mode="2" target="_blank"><i class="fa fa-envelope-o"></i> Tell us more!</a>
     <script>
-    (function()***REMOVED***var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id))***REMOVED***js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)***REMOVED***id=id+'_';if(!gi.call(d,id))***REMOVED***qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)***REMOVED******REMOVED***)()
+    (function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()
     </script>
 </template>
 
