--- a/client/views/users/users.show.html
+++ b/client/views/users/users.show.html
@@ -5,33 +5,33 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-12 col-sm-4 text-center">
-                            <img src="***REMOVED******REMOVED***profile.profile_picture_url***REMOVED******REMOVED***" alt="" class="center-block img-circle img-thumbnail img-responsive">
-                            ***REMOVED******REMOVED***!-- <ul class="list-inline ratings text-center" title="Ratings">
+                            <img src="{{profile.profile_picture_url}}" alt="" class="center-block img-circle img-thumbnail img-responsive">
+                            {{!-- <ul class="list-inline ratings text-center" title="Ratings">
                                 <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
                                 <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
                                 <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
                                 <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
                                 <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                            </ul> --***REMOVED******REMOVED***
+                            </ul> --}}
                         </div>
                         <!--/col-->
                         <div class="col-xs-12 col-sm-8">
-                            <h2>***REMOVED******REMOVED***username***REMOVED******REMOVED***
-                                ***REMOVED******REMOVED***#if profileBelongsCurrentUser username***REMOVED******REMOVED***
-                                <a href="***REMOVED******REMOVED***pathFor 'users.edit'***REMOVED******REMOVED***"><i class="fa fa-pencil-square-o"></i></a>
-                                ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
+                            <h2>{{username}}
+                                {{#if profileBelongsCurrentUser username}}
+                                <a href="{{pathFor 'users.edit'}}"><i class="fa fa-pencil-square-o"></i></a>
+                                {{/if}}
                             </h2>
                             <p><strong>About: </strong> Web Designer / UI Expert. </p>
-                            ***REMOVED******REMOVED***!-- <p><strong>Hobbies: </strong> Read, out with friends, listen to music, draw and learn new things. </p> --***REMOVED******REMOVED***
-                            ***REMOVED******REMOVED***!-- <p><strong>Skills: </strong>
+                            {{!-- <p><strong>Hobbies: </strong> Read, out with friends, listen to music, draw and learn new things. </p> --}}
+                            {{!-- <p><strong>Skills: </strong>
                                 <span class="label label-info tags">html5</span>
                                 <span class="label label-info tags">css3</span>
                                 <span class="label label-info tags">jquery</span>
                                 <span class="label label-info tags">bootstrap3</span>
-                            </p> --***REMOVED******REMOVED***
+                            </p> --}}
                         </div>
                         <!--/col-->
-                        ***REMOVED******REMOVED***!-- <div class="clearfix"></div>
+                        {{!-- <div class="clearfix"></div>
                         <div class="col-xs-12 col-sm-4">
                             <h2><strong> 20,7K </strong></h2>
                             <p><small>Followers</small></p>
@@ -49,7 +49,7 @@
                             <p><small>Snippets</small></p>
                             <button type="button" class="btn btn-primary btn-block"><span class="fa fa-gear"></span> Options </button>
                         </div>
-                        <!--/col--> --***REMOVED******REMOVED***
+                        <!--/col--> --}}
                     </div>
                     <!--/row-->
                 </div>
