--- a/server/emails/emails.thankYouSigningUpExistingUser.handlebars
+++ b/server/emails/emails.thankYouSigningUpExistingUser.handlebars
@@ -1,9 +1,9 @@
-<p>Hello ***REMOVED******REMOVED***user.username***REMOVED******REMOVED***,</p>
+<p>Hello {{user.username}},</p>
 <p>
     We are really happy to see you join
-    <a href="http://speedhack.io/events/***REMOVED******REMOVED***event.slig***REMOVED******REMOVED***" style="color: orange;">
-        ***REMOVED******REMOVED***event.name***REMOVED******REMOVED***
-    </a> happening on ***REMOVED******REMOVED***event.date***REMOVED******REMOVED***.
+    <a href="http://speedhack.io/events/{{event.slig}}" style="color: orange;">
+        {{event.name}}
+    </a> happening on {{event.date}}.
 </p>
 <p>
     We have partnered with many companies for this event. We highly recommend check their APIs prior to the event.
@@ -11,13 +11,13 @@
 
 <p>
     During the event we will use <a href="http://speedhack.io">SpeedHack.io</a> platform to run the hackathon.<br/>
-    Your username is <b>***REMOVED******REMOVED***user.username***REMOVED******REMOVED***</b>.
+    Your username is <b>{{user.username}}</b>.
 </p>
 
 <h3>Partners</h3>
-***REMOVED******REMOVED***#each event.sponsors***REMOVED******REMOVED***
-    <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" width="150px" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED***" /></a> <br/>
-***REMOVED******REMOVED***/each***REMOVED******REMOVED***
+{{#each event.sponsors}}
+    <a href="{{url}}"><img src="{{logo}}" width="150px" alt="{{name}}" /></a> <br/>
+{{/each}}
 
 <h4>Questions?</h4>
 <p>
